// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Styles matches NavbarLink brand 1`] = `
.c0 {
  display: inline-block;
  padding-top: 0.3125rem;
  padding-bottom: 0.3125rem;
  font-size: 1.25rem;
  line-height: inherit;
  white-space: nowrap;
}

<a
  className="c0 sc-htpNat jZQKac eRiqeT"
/>
`;

exports[`Styles matches NavbarLink dark active 1`] = `
.c0 {
  color: rgba(255,255,255,0.9);
}

.c0:hover,
.c0:focus {
  color: rgba(255,255,255,0.9);
}

<a
  className="c0 sc-htpNat jZQKac eRiqeT"
/>
`;

exports[`Styles matches NavbarLink dark disabled 1`] = `
.c0 {
  color: rgba(255,255,255,0.25);
}

.c0:hover,
.c0:focus {
  color: rgba(255,255,255,0.25);
}

<a
  className="c0 sc-htpNat bwBFZr eRiqeT"
  disabled={true}
/>
`;

exports[`Styles matches NavbarLink dark disabled 2`] = `
.c0 {
  color: rgba(255,255,255,0.5);
}

.c0:hover,
.c0:focus {
  color: rgba(255,255,255,0.75);
}

<a
  className="c0 sc-htpNat jZQKac eRiqeT"
/>
`;

exports[`Styles matches NavbarLink light active 1`] = `
.c0 {
  color: rgba(0,0,0,0.9);
}

.c0:hover,
.c0:focus {
  color: rgba(0,0,0,0.9);
}

<a
  className="c0 sc-htpNat jZQKac eRiqeT"
/>
`;

exports[`Styles matches NavbarLink light disabled 1`] = `
.c0 {
  color: rgba(0,0,0,0.3);
}

.c0:hover,
.c0:focus {
  color: rgba(0,0,0,0.3);
}

<a
  className="c0 sc-htpNat bwBFZr eRiqeT"
  disabled={true}
/>
`;

exports[`Styles matches NavbarLink light disabled 2`] = `
.c0 {
  color: rgba(0,0,0,0.5);
}

.c0:hover,
.c0:focus {
  color: rgba(0,0,0,0.7);
}

<a
  className="c0 sc-htpNat jZQKac eRiqeT"
/>
`;
